에르메스, 샤넬, 루이뷔통 추가

--- a/assets/i002.html
+++ b/assets/i002.html
@@ -1,11 +1,230 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
+<!-- DW6 -->
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=euc-kr" />
-<title>Untitled Document</title>
+<!-- Copyright 2005 Macromedia, Inc. All rights reserved. -->
+<title>Text</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densitydpi=high-dpi" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" href="mm_training.css" type="text/css" />
 </head>
+<body bgcolor="#64748B">
+ <table width="100%" border="0" cellspacing="0" cellpadding="0">
+	<tr bgcolor="#26354A">
+	<td width="15" nowrap="nowrap"><img src="mm_spacer.gif" alt="" width="15" height="1" border="0" /></td>
+	<td height="70" class="logo" nowrap="nowrap">Chanel</td>
+	<td width="100%">&nbsp;</td>
+	</tr>
 
-<body>
-<center><img src="images/update.png" /></center>
+	<tr bgcolor="#FF6600">
+	<td colspan="3"><img src="mm_spacer.gif" alt="" width="1" height="4" border="0" /></td>
+	</tr>
+
+	<tr bgcolor="#D3DCE6">
+	<td colspan="3"><img src="mm_spacer.gif" alt="" width="1" height="1" border="0" /></td>
+	</tr>
+
+	<tr bgcolor="#FFCC00">
+	<td width="15" nowrap="nowrap">&nbsp;</td>
+	<td height="24">
+	<table border="0" cellpadding="0" cellspacing="0" id="navigation">
+        <tr>
+          <td class="navText" align="center" nowrap="nowrap">샤넬</td>
+        </tr>
+      </table>	</td>
+	<td width="100%">&nbsp;</td>
+	</tr>
+
+	<tr bgcolor="#D3DCE6">
+	<td colspan="3"><img src="mm_spacer.gif" alt="" width="1" height="1" border="0" /></td>
+	</tr>
+
+	<tr bgcolor="#FF6600">
+	<td colspan="3"><img src="mm_spacer.gif" alt="" width="1" height="4" border="0" /></td>
+	</tr>
+
+	<tr bgcolor="#D3DCE6">
+	<td colspan="3"><img src="mm_spacer.gif" alt="" width="1" height="1" border="0" /></td>
+	</tr>
+
+	<tr bgcolor="#D3DCE6">
+	<td width="15" valign="top">&nbsp;</td>
+	<td width="480" valign="top">
+	&nbsp;
+	<table border="0" cellspacing="0" cellpadding="2" width="470">
+		<tr>
+		<td class="pageName">Chanel History</td>
+		</tr>
+
+		<tr>
+		<td class="bodyText">
+		<table width="100%" border="0" cellpadding="5" cellspacing="0">
+        <tr>
+        <td>
+	      <table style="border-top-width: 1px !important; border-right-width: 1px !important; border-bottom-width: 1px !important; border-left-width: 1px !important; border-top-style: dashed !important; border-right-style: dashed !important; border-bottom-style: dashed !important; border-left-style: dashed !important; border-top-color: rgb(153, 153, 153) !important; border-right-color: rgb(153, 153, 153) !important; border-bottom-color: rgb(153, 153, 153) !important; border-left-color: rgb(153, 153, 153) !important; ">
+		  <tr>
+            <td valign="top" scope="col"><img src="images/CHANEL2.jpg" alt="샤넬" width="161" height="124" /></td>
+		    <td valign="top" scope="col">
+		      <p><strong>1883년 08월 19일 출생. </strong><br />
+
+		        프랑스 소뮈르 출생.</p>
+		      <p><strong>1895년 어머니 사망.</strong><br />
+
+		        샤넬(12세)을 포함한 3자매를 수녀원이 운영하는 고아원으로   보내짐.</p>
+		      <p><strong>1901년 18세.</strong><br />
+
+		        물랭의 기숙학교로 옮김.</p>
+		      <p><strong>1910년 샤넬모드(Chanel Modes)</strong><br />
+
+		        파리의 캉봉거리(Rue Cambon)에   '샤넬모드(Chanel Modes)' 오픈.</p>
+		      <p><strong>1921년 NO.5 발표.</strong><br />
+
+		        샤넬의 첫 향수 NO.5 발표.</p>
+		      <p><strong>1924년 '라소시에트 데 파르풍 샤넬'설립.</strong><br />
+
+		        향수와 뷰티라인을 제조 판매하는 회사 '라소시에트   데 파르풍 샤넬'설립.</p>
+		      <p><strong>1926년 야회복 '리틀 블랙 드레스' 발표</strong>.</p>
+		      <p><strong>1939년 은퇴.</strong></p>
+		      <p><strong>1944년 스위스에 정착.</strong></p>
+		      <p><strong>1954년 복귀. 71세.</strong></p>
+		      <p><strong>1955년 2월 '2.55'백 출시.</strong><br />
+
+		        <strong>첫 남성 향수 '오 드 투알레트'   출시.</strong></p>
+		      <p><strong>1971년 01월 10일 사망.</strong> <br />
+
+		        파리 릿츠호텔에서 사망.</p>
+		      </td>
+		    </tr>
+            </table>
+            <table style="border-top-width: 1px !important; border-right-width: 1px !important; border-bottom-width: 1px !important; border-left-width: 1px !important; border-top-style: dashed !important; border-right-style: dashed !important; border-bottom-style: dashed !important; border-left-style: dashed !important; border-top-color: rgb(153, 153, 153) !important; border-right-color: rgb(153, 153, 153) !important; border-bottom-color: rgb(153, 153, 153) !important; border-left-color: rgb(153, 153, 153) !important; ">
+            <tr>
+            	<td><img src="images/CHANEL6.jpg" width="161" height="156" /></td>
+            	<td valign="top"><p><strong>1983년</strong>  디자이너 '카를 라거펠트(Karl LagerFeld)' 수석디자이너 임명.</p>
+            	  <p><strong>1987년</strong> 샤넬의 첫 번째 시계 발표.</p>
+           	    <p><strong>1999년</strong> 스킨케어 라인 '프레시지옹(PRECISION)' 출시.</p></td>
+            </tr>
+            </table>
+            </td>
+            </tr>
+        </table>
+        </td>
+
+		</tr>
+        <tr>
+        	<td>&nbsp;</td>
+        </tr>
+        <tr>
+			<td class="pageName">명품 브랜드로써의 CHANEL</td>
+		</tr>
+        <tr>
+        	<td><p>&nbsp;<strong>명품</strong>이란 '뛰어나거나 이름난 물건'이라는 사전적 의미가 있습니다. 이는 단순히 한자어 名品에 대한 의미일 것입니다. 그렇지만 그 브랜드가 명품이 되기까지의 과정은 긴 역사와 많은 노력이 들었음을 누구나 알고 있을 것입니다.<br />
+        	    <br />
+       	      &nbsp;<strong>CHANEL</strong>은 대부분의 명품 브랜드가 그렇듯이 창업자의 이름에서 온 것이며, 그 창업자는 혁신적인 인물이었습니다. 그렇기에 명품 브랜드로써의 CHANEL을 설명하기 위해 <strong>가브리엘 샤넬(Gabriel Bouheur Chanel)</strong>에 대한 이해가 꼭 필요합니다.
+
+       	      <br />
+       	      <br />
+       	      &nbsp;
+       	      그리고 창업자가 혁신적인 신화를 만들었다면, 현재의 현대적 이미지를 창조해 낸 뛰어난 디자이너가 한 분 더 존재 합니다. 그 분은 다름 아닌 독일 출신의 디자이너 <strong>카를 라거펠트</strong>입니다.<br />
+       	      <br />
+       	      기회가 되면 카를 라거펠트에 대해서도 다루도록 하겠습니다.
+
+              <br />
+              <br />
+              그럼 본격적으로 가브리엘 샤넬과 브랜드 샤넬에 대해 적어 보겠습니다. </p>
+       	  </td>
+        </tr>
+        <tr>
+        	<td>&nbsp; </td>
+        </tr>
+        <tr>
+        	<td style="padding-top: 6px; padding-right: 9px; padding-bottom: 4px; padding-left: 9px; vertical-align: top; background-image: initial; background-attachment: initial; background-origin: initial; background-clip: initial; background-color: rgb(239, 54, 28); color: rgb(255, 255, 255);  height: 18px; background-position: initial initial; background-repeat: initial initial; ">가브리엘 샤넬의 삶과 CHANEL </td>
+        </tr>
+        <tr>
+        	<td><p><strong>1. 출생에서 패션계로의 입문</strong></p>
+        	  <p> 가브리엘 샤넬은 1883년 8월 19일 프랑스의 서부지방 소뮈르에서 아버지 알베르 샤넬과 어머니 잔 드볼 사이에서 태어 났습니다. 그녀의   부모는 가난하여 빈곤한 생활을 하였으며, 샤넬이 12세가 되던 해 모친의 사망으로 샤넬을 포함한 3남매는 아버지에게 버림 받아 수도원에서   운영하는 고아원에 맡겨지게 됩니다.</p>
+        	  <p> 불우한 어린시절 보내고 18세가 되던해 수도원을 나와 시골마을 물랑에서 바느질공으로 일하면서 바에서 노래를 부르며 가수를 지망하게   됩니다. 이때 &lt;Ko Ko Ri Ko&gt;와 &lt;Qui qu'a vu Coco dans le Trocadero&gt;라는 노래를 자주   불렀으며, 이 노래는 바를 찾는 많은 사람들에게 인기를 얻어 이때의 코코가 샤넬의 애칭이 되었습니다.</p>
+        	  <p> 이때 기병대 장교인 에튀엥느 발장을 만나 그를 후견인으로 상류 사회로의 발판을 마련하게 됩니다.</p>
+        	  <p>당시 사교계로 이용되던 파리근교의 발장의 목장에서 사교계에 필요한 많은 지식들을 습득하게 됩니다. 이때 승마도 배우면서, 남성용 승마복을   개조하여 입고 나오는 등 이때 부터 패션계로의 가능성을 보였던 듯 합니다. 당시 여성이 남성의 복장을 한다는 자체가 매우 충격적인 일이었다고   합니다. 이런 발상은 남녀의 구분을 확실히 어릴때부터 몸에 익히는 귀족으로 태어나지 않은 그녀만이 할 수 있는 일이었는지도 모르겠다는 생각이   듭니다.</p>
+        	  <p align="center"><img align="middle" src="images/CHANEL5.jpg" width="300" height="234" imgqe="true" /> <br />
+       	      &lt;당시 여성들의 복장&gt;</p>
+        	  <p>1909년에는 마르젤보 거리 160번지에 여성용 모자를 전문으로 하는 가게을 오픈하게 되며, 1910년에 파리의 캉봉거리 21번지에   &lt;샤넬 모드&gt;라는 모자 전문점을 개업하는데, 샤넬은 이때 발장과 헤어져 샤넬모드의 개업 자금을 후원하고, 평생 연인으로 지낸 영국인   아서 카펠과 교제를 시작합니다.</p>
+        	  <p align="center"><img id="se_object_13067600929048483" align="middle" src="images/CHANEL7.jpg" width="212" height="320" imgqe="true" /><br />
+      	    </p>
+        	  <p><strong>2. 패션 디자이너로서의 샤넬</strong></p>
+        	  <p> 1913년 드뷜에 2호점을 내고 세계1차 대전일 발발한 후 1915년에 &lt;메종 드 쿠튀르&gt;를 오픈하였습니다. 당시 1차   대전으로 인해 남자들은 전쟁터로 향했으며, 사회와 공장에는 여성들이 넘쳐 났다고 합니다. 그때 여성들의 복장은 매우 불편하기 그지 없었으며,   코로셋은 여성들의 건강까지 해치고 있었습니다. 이때 샤넬은 남성복의 소재를 여성복에 적용하여 편하고 심플한 의상을 발표하게 되는데, 이 의상은   대 유행을 하게 되고, 그 유행은 전쟁이 끝난 후에도 유지 되어 샤넬을 더욱 유명하게 만들었습니다.</p>
+        	  <p>거추장스럽고 불편한 복장과 건강에 매우 좋지 않았던 코르셋으로 부터 여성을 해방시킨 것이 당시 그녀의 업적이 아닐까 합니다.</p>
+        	  <p> </p>
+        	  <p>1918년 1차 대전이 종결되자 카펠과 결혼하였으나, 1919년 사고로 카펠이 사망하자 다시 혼자가 됩니다. 후에도 많은 남자들과 연이   있지만 모두 급사하거나 파산하는 등 불행을 겪게 되는데, 이를 보고 샤넬을 불행한 사자자리의 숙명을 가지고 태어난 여자라 부르기도   합니다.</p>
+        	  <p><br />
+        	    1921년에는 샤넬의 첫 향수인 &lt;No.5&gt;를 발표합니다. 이어 &lt;No.22&gt;가 발표되고, 이 때 극작가였던   장 콕토, 화가인 피카소, 작곡가인 스트라빈스키 등이 주최한 살롱에 출연하면서 사교계의 거물이 었습니다. 당시 화가였던 마리 로랑생이 그녀의   초상화를 그렸는데, 현재 파리의 올랑쥴리 미술관에 있다고 합니다.</p>
+        	  <p>1920년대에 샤넬은 되빌룩(Deauville Look)을 만들어, 당시를 '되빌시대'라고 부를 정도로 유명해 졌다고 하며, 1923년   미국의 패션잡지 &lt;Bazaar&gt;에 소개되면서 세계적인 디자이너로 발판을 마련하게 됩니다.</p>
+        	  <p> </p>
+        	  <p align="center"><img id="se_object_130676019752092102" align="middle" src="images/CHANEL1.jpg" width="335" height="422" imgqe="true" /><br />
+      	    </p>
+        	  <p> 1924년에는 영국의 웨스트민스터 공작을 만나 그의 취미인 보석애호에 의해 모조 보석을 사용한 쥬얼리를 발표하였습니다.</p>
+        	  <p> 1939년 제2차 세계대전이 발발하자 샤넬은 패션계를 은퇴하게 됩니다.</p>
+        	  <p> 1940년에 프랑스가 독일군에게 점령당하고, 샤넬은 독일군 장교와 사랑에 빠져 스파이 작전에까지 가담하게 되었다고 합니다. 1944년   프랑스의 샤를르 드골이 이끄는 프랑스군과 연합군이 승리하자 샤넬은 스위스로 망명하여 정착하게 됩니다.</p>
+        	  <p> 1954년 71세의 나이에 파리로 돌아와 패션계에 복귀하지만, &lt;매국노&gt;라는 꼬리표가 10여년간 샤넬의 발목을 잡았습니다.   이와 반대로 미국에선 그녀의 참신한 패션이 열광적인 선품을 끌었으며, 1955년 울 소재의 새로운 샤넬 슈트를 발표하여 상을 수여하기도   합니다.</p>
+        	  <p align="center"><img align="middle" src="images/CHANEL8.jpg" width="360" height="460" /></p>
+        	  <p>1955년 2월 2.55백 출시. 55년 2월에 출시되어 그렇게 이름이 붙여졌다고 합니다.</p>
+        	  <p><br />
+      	    </p>
+        	  <p><strong>3. 샤넬의 죽음</strong></p>
+        	  <p> 1971년, 거주하고 있던 파리의 릿츠 호텔 스위트룸에서 콜렉션을 준비하던 샤넬은 모르핀에 취한채 숨을 거두었으며, 그녀의 유해는   &lt;나치스에 혼을 팔아넘긴 매국노&gt;라는 꼬리표와 함께 조국을 배신한 행위에 의해 프랑스에 묻히는 것을 거부당하여, 망명생활을 했던   스위스 로잔에 매장되었습니다.</p>
+        	  <p align="center"><img align="middle" src="images/CHANEL3.jpg" width="300" height="279" /></p>
+       	    <p> </p></td>
+        </tr>
+        <tr>
+        	<td>&nbsp; </td>
+        </tr>
+		<tr>
+        	<td style="padding-top: 6px; padding-right: 9px; padding-bottom: 4px; padding-left: 9px; vertical-align: top; background-image: initial; background-attachment: initial; background-origin: initial; background-clip: initial; background-color: rgb(239, 54, 28); color: rgb(255, 255, 255);  height: 18px; background-position: initial initial; background-repeat: initial initial; ">가브리엘 샤넬의 죽음 이후의 CHANEL </td>
+        </tr>
+        <tr>
+        	<td><p><strong>1. 샤넬의 죽음과 가를 라거펠트의 등장</strong></p>
+        	  <p> 샤넬의   죽음과 함께 CHANEL은 하향세를 걷게 되지만, 1983년 독일 출신의 디자이너 카를 라거펠트가 수석디자이너로 임명되면서 CHANEL은   현대적인 디자인으로 발전하게 됩니다.</p>
+        	  <p>1987년에는   CHANEL의 최초 시계가 발표되고,</p>
+        	  <p>1999년에는   스킨케어 라인인 '프레시지옹(PRECISION)'을 출시합니다.</p>
+        	  <p> 현재   CHANEL은 패션, 악세사리, 향수, 메이크업, 스킨케어, 쥬얼리 모든 분야에서 명픔으로써의 이미지를 굳건히 하고 있으며, 이는 혁신적인   창업주의 열정과 노력의 결과라 할 수 있을 것 입니다.      	    </p>
+       	    <p align="center"><img align="middle" src="images/CHANEL4.jpg" width="300" height="443" imgqe="true" /></p></td>
+        </tr>
+        <tr>
+        	<td>&nbsp; </td>
+        </tr>
+		<tr>
+        	<td style="padding-top: 6px; padding-right: 9px; padding-bottom: 4px; padding-left: 9px; vertical-align: top; background-image: initial; background-attachment: initial; background-origin: initial; background-clip: initial; background-color: rgb(239, 54, 28); color: rgb(255, 255, 255);  height: 18px; background-position: initial initial; background-repeat: initial initial; "><strong>CHANEL 대표 상품</strong></td>
+        </tr>
+        <tr>
+        	<td><p>패션 전반에 걸쳐 다양한 상품라인을 갖추고 있습니다.<br />
+        	  다른 탭에 자세한 상품설명을 추가하도록 하겠습니다.
+</p>
+       	    </td>
+        </tr>
+        <tr>
+        	<td>&nbsp; </td>
+        </tr>
+        <tr>
+        	<td>&nbsp; </td>
+        </tr>
+        <tr>
+        	<td>&nbsp; </td>
+        </tr>
+
+	</table>
+
+	<p><br />
+	  </p></td>
+	</tr>
+
+	<tr>
+	<td>&nbsp;<br />
+
+
+
+	&nbsp;<br />	</td>
+    <td width="450"><div align="right">명품Story </div></td>
+  </tr>
+</table>
 </body>
 </html>
+
